modulo ok e html basico criado

--- a/projeto/frontEnd/index.html
+++ b/projeto/frontEnd/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stilo.css">
     <title>Torre de Hanói</title>
 </head>
 <body>
+    <header>
+        <h2>
+            O Problema da Torre de Hanói 
+        </h2>
+    </header>
+    <div class="area-do-jogo">
+        <div class="haste1"></div>
+        <div class="haste2"></div>
+        <div class="haste3"></div>
+    </div>
+    <div class="chao"></div>
     
 
-<script src="../controles.js"></script>
+<script src="./controles.js" type="module" ></script>
+<script src="../algoritmo.js" type="module"></script>
 </body>
 </html>
